welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: Boolean does not take parameters
  return green()
              ^